--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,9 @@
             <h2>Contact Me</h2>
             <p>If you have any questions or would like to get in touch, feel free to reach out!</p>
             <p>You can also email me directly at: <a href="mailto:tnsuthar108@gmail.com">tnsuthar108@gmail.com</a></p>
-            <form action="#" method="POST">
+            <form action="https://api.web3forms.com/submit" method="POST">
+                <input type="hidden" name="access_key" value="2e78ec64-72d5-46cf-afb6-7e9e54beec7a">
+                
                 <div class="form-group">
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name" required>
@@ -43,7 +45,7 @@
                     <label for="message">Message</label>
                     <textarea id="message" name="message" required></textarea>
                 </div>
-                <button type="submit">Send Message</button>
+                <button type="submit">Submit Form</button>
             </form>
         </div>
     </div>
